tests/baselines/reference/restPropertyWithBindingPattern.errors.txt
restPropertyWithBindingPattern.ts(1,6): error TS2501: A rest element cannot contain a binding pattern.
restPropertyWithBindingPattern.ts(2,6): error TS2501: A rest element cannot contain a binding pattern.
restPropertyWithBindingPattern.ts(2,6): error TS2701: The target of an object rest assignment must be a variable or a property access.
restPropertyWithBindingPattern.ts(3,6): error TS2461: Type '{}' is not an array type.
restPropertyWithBindingPattern.ts(3,6): error TS2501: A rest element cannot contain a binding pattern.
restPropertyWithBindingPattern.ts(4,6): error TS2501: A rest element cannot contain a binding pattern.
restPropertyWithBindingPattern.ts(4,6): error TS2701: The target of an object rest assignment must be a variable or a property access.


==== restPropertyWithBindingPattern.ts (7 errors) ====
    ({...{}} = {});
         ~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    ({...({})} = {});
         ~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
         ~~~~
!!! error TS2701: The target of an object rest assignment must be a variable or a property access.
    ({...[]} = {});
         ~~
!!! error TS2461: Type '{}' is not an array type.
         ~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    ({...([])} = {});
         ~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
         ~~~~
!!! error TS2701: The target of an object rest assignment must be a variable or a property access.